...
    const [isLoading, setIsLoading] = useState(false);
    const [channelType, setChannelType] = useState(
        initialValues.type || "public",
    );

    const { createChannel, editChannel, deleteChannel } = useChannels();
    const buttonLabel = step === 0 ? "Next" : isEditMode ? "Save" : "Create";
    const sheetTitle = isEditMode ? "Edit Channel" : "Create a Channel";
    const swiperRef = useRef(null); // Ref for Swiper
    const channelNameInputRef = useRef();
    const channelDescriptionInputRef = useRef();

    useEffect(() => {
...
            [
                {
                    text: "Cancel",
                    style: "cancel",
                },
                {
                    text: "Delete",
                    style: "destructive",
                    onPress: handleDeleteChannel,
                },
            ],
            { cancelable: false },
        );
...
                                    color: theme.colors.lightBlue,
                                    fontSize: 20,
                                }}
                                editable={!isEditMode}
                                autoCapitalize="none"
                                ref={channelNameInputRef}
                                testID="channel-tag-input"
                            />
                        </TouchableOpacity>
                        {/* Channel Visibility */}
                        <View style={styles.channelVisibility}>
                            <TouchableOpacity
                                onPress={() =>
...
                                        height: 100,
                                        textAlignVertical: "top",
                                    },
                                ]}
                                ref={channelDescriptionInputRef}
                                scrollEnabled
                                testID="channel-tag-desc"
                            />
                        </TouchableOpacity>
                    </View>
                </TouchableWithoutFeedback>
                <TouchableWithoutFeedback
                    onPress={Keyboard.dismiss}
...
                            )}
                        </Text>
                        <SearchInput
                            searchText={searchText}
                            onSearchChange={handleSearchTextChange}
                            onClear={() => setSearchText("")}
                            placeholder="Search for Users"
                            containerStyle={styles.inputContainer}
                            inputStyle={{
                                ...styles.inputText,
                                textAlign: "left",
                                width: "75%",
                            }}
...
