...
     * @returns {void}
     */
    const handleLogout = async () => {
        setMenuVisible(false);
        await updateProfile();
        await logout();
        navigation.replace("Login");
    };

    /**
     * Navigates to the follower list screen.
     * @function handleFollowerList
     * @returns {void}
...
            [
                {
                    text: "Cancel",
                    onPress: () => console.log("Cancel"),
                },
                {
                    text: "Logout",
                    onPress: () => handleLogout(),
                },
            ],
        );
    };

...
            <View style={[styles.barContainer, { top: insets.top }]}>
                <TouchableOpacity
                    onPress={() => {
                        setMenuVisible((prev) => !prev);
                    }}
                    hitSlop={{ top: 20, bottom: 20, left: 30, right: 30 }}
                    testID="profile-more"
                >
                    <BarsSVG width={25} height={25} color="#000" />
                </TouchableOpacity>
                {menuVisible && <PopUpMenu menuList={ProfileMenuList} />}
            </View>
            <View style={styles.topContainer}>
...
