...
                    inviteMoreSheetRef?.current?.open();
                }
            } catch (error) {
                console.log("Error fetching team data: ", error.message);
            }
        } else {
            navigation.replace("Login");
        }
    }, [userData, isOnboarded]);

    useEffect(() => {
        fetchUserData();
    }, []);
...
        };
    }, []);

    return (
        <View style={styles.container}>
            <ChannelBar
                channels={userJoinedChannels}
                setChannels={setMyChannels}
                currentChannel={currentChannel}
                setCurrentChannel={setCurrentChannel}
                showChannelScreen={showChannelsScreen}
                setShowChannelsScreen={setShowChannelsScreen}
                refreshBar={refreshBar}
...
