...
                    <Text style={styles.userNameText} numberOfLines={1}>
                        {member.displayName}
                    </Text>
                    <Text style={styles.userName}>@{member.userName}</Text>
                </View>
            </View>
            <View style={{ width: "25%" }} testID="add-user">
                <Button
                    label={title}
                    disabled={isDisabled}
                    borderRadius={20}
                    onPress={handleToggle}
                    bgColor={backgroundColor}
...
