...
        }
    };

    const labelContent = loading ? (
        <Loader size="small" color="white" />
    ) : (
        "Post"
    );
    const removeImage = (image) => {
        const updatedImages = images.filter((i) => i !== image);
        setImages(updatedImages);
    };
    const postDisbaled =
...
                                            style={styles.inputScroll}
                                            scrollEnabled={enableScroll}
                                        >
                                            <TextInput
                                                scrollEnabled={false}
                                                style={styles.inputField}
                                                placeholder="Add a comment"
                                                placeholderTextColor="#666666"
                                                multiline
                                                value={quoteText}
                                                onChange={scrollToEnd}
                                                onChangeText={handleInputChange}
                                                onLayout={layoutTextHeight}
...
