...
                    <TouchableOpacity
                        onPress={() => {
                            setShowPicker(!showPicker);
                        }}
                        onLongPress={requestFullAccess}
                        style={styles.action}
                        testID="picker-gallery"
                    >
                        <GallerySVG />
                    </TouchableOpacity>
                </View>

                {isLimited && showPicker && (
...
