appId: "com.mycurio.curio"
---
- assertVisible: "Login"

- tapOn:
      point: 14%,51%
- inputText: "florance@yopmail.com"

- tapOn:
      point: 12%,29%

- tapOn:
      point: 12%,59%
- inputText: "Test@1234"

- tapOn: "Login"
- waitForAnimationToEnd

- assertNotVisible: "Login"
- waitForAnimationToEnd
- swipe:
      start: "92%,9%"
      end: "2%,8%"
      duration: 760

- tapOn:
      id: "channels"

- waitForAnimationToEnd

- tapOn: "Create"
- waitForAnimationToEnd

- tapOn:
      id: "channel-tag-input"
- inputText: "EDIT_CHANNEL_2"
- tapOn:
      id: "channel-tag-desc"
- inputText: "a short description"
- tapOn:
      point: "48%,60%"
- tapOn: "Next"

- tapOn: "Search for Users"
- inputText: "Mabel"
- tapOn:
      point: "48%,60%"
- tapOn:
      id: "add-user"
      index: 0
- tapOn: "Search for Users"
- eraseText
- inputText: "Oli"
- tapOn:
      point: "48%,60%"
- tapOn:
      id: "add-user"
      index: 0

- tapOn: "Create"
- waitForAnimationToEnd
- assertVisible: "#EDIT_CHANNEL_2"

- tapOn: "Members"
- waitForAnimationToEnd
- tapOn:
      point: 55%,9%
- waitForAnimationToEnd
- tapOn: Edit
- waitForAnimationToEnd
- tapOn:
      id: channel-tag-desc
- eraseText
- inputText: " more description"

- tapOn:
      point: "48%,60%"
- tapOn: "Next"
- waitForAnimationToEnd
- tapOn: "Search for Users"
- inputText: "Lokesh"
- tapOn:
      point: "48%,60%"
- tapOn:
      id: "add-user"
      index: 0
- tapOn:
      id: "add-user"
      index: 1
- tapOn: "Search for Users"
- eraseText
- tapOn:
      id: "add-user"
      index: 1
- tapOn: "Save"
- waitForAnimationToEnd
- tapOn: "Members"
- waitForAnimationToEnd
- tapOn:
      point: 55%,9%
- waitForAnimationToEnd
- tapOn: Edit
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- assertNotVisible: "#EDIT_CHANNEL_2"
