appId: "com.mycurio.curio"
---
# - launchApp
# - waitForAnimationToEnd
# - assertVisible: "Login"
# - tapOn:
#       point: 14%,51%
# - inputText: "mabel@yopmail.com"

# - tapOn:
#       point: 12%,29%

# - tapOn:
#       point: 17%,61%
# - inputText: "Test@123"

# - tapOn: "Login"

# - assertNotVisible: "Login"
# - waitForAnimationToEnd
# - tapOn:
#       id: create-post-tab-icon

# - tapOn: "What's on your mind?"
# - inputText: "This is a test post"

# - hideKeyboard

# - tapOn: "Post"

- waitForAnimationToEnd
- tapOn:
      id: "profile-nav-icon"

- waitForAnimationToEnd
- tapOn:
      id: "delete-post"
      index: 0

- tapOn: "Delete"

- tapOn:
      id: "profile-nav-icon"

# - tapOn:
#       id: "profile-more"
# - tapOn: "Logout"
# - tapOn: "Logout"
# - waitForAnimationToEnd
# - assertVisible: "Login"
